--- a/src/containers/greeting/Greeting.css
+++ b/src/containers/greeting/Greeting.css
@@ -11,16 +11,23 @@
   margin: 0px auto;
   margin-top: 2rem;
   display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .greeting-main {
   display: flex;
+  justify-items: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
   /* text-align: center; */
 }
 
 .greeting-main > * {
   flex: 1;
   margin-bottom: 30px;
+  max-width: 800px;
 }
 
 .button-greeting-div {
